add: 스파르타 기본기 끝나고 개인적으로 사이트 만들어보기

--- a/sparta/views/index.ejs
+++ b/sparta/views/index.ejs
@@ -48,7 +48,7 @@
             console.log(category)
             $.ajax({
                 type: "GET",
-                url: `/api/goods${category ? "?category=" + category : ""}`,
+                url: `/api/goods${category ? "?category=" + category :"?category=" + ""}`,
                 data: {},
                 success: function (response) {
                     let goods = response["goods"]
