로그인 후 토큰생성, 불러오기까지 완료

--- a/nomadZoom/views/index.pug
+++ b/nomadZoom/views/index.pug
@@ -10,7 +10,8 @@ html(lang="en")
         block head
     body 
         header
-            h1 hwang
+            h1 
+                a(href="/") hwang
         main 
             h2 Welcome to hwang's server
             a(href="/user/signup" style="margin-right:10px;") signup
